--- a/src/styles/Layout.module.css
+++ b/src/styles/Layout.module.css
@@ -6,10 +6,16 @@
 
 .cabecalho{
     display: flex;
-    justify-content: flex-end;
+    justify-content: space-between;
     font-size: 25px;
     padding: 15px;
 }
+
+.cabecalho h1{
+    margin: 0;
+    font-size: 1.4rem;
+}
+
 .cabecalho a{
     background-color: rgb(59, 59, 82);
     padding: 5px;
@@ -19,5 +25,6 @@
 }
 
 .conteudo{
-    
+    padding: 25px;
+    height: 100%;
 }
